--- a/js/src/ui/Portal/portal.css
+++ b/js/src/ui/Portal/portal.css
@@ -38,7 +38,7 @@
   transition-duration: 0.25s;
   transition-timing-function: ease-out;
 
-  background-color: rgba(0, 0, 0, 0.85);
+  background-color: rgba(0, 0, 0, 1);
   opacity: 0;
   z-index: -10;
 
@@ -58,6 +58,10 @@
   right: 1rem;
   font-size: 4em;
 
+  transition-property: opacity;
+  transition-duration: 0.25s;
+  transition-timing-function: ease-out;
+
   &, * {
     height: 48px !important;
     width: 48px !important;
@@ -65,5 +69,6 @@
 
   &:hover {
     cursor: pointer;
+    opacity: 0.5;
   }
 }
