--- a/js/src/ui/AccountCard/accountCard.css
+++ b/js/src/ui/AccountCard/accountCard.css
@@ -23,7 +23,7 @@
   flex-direction: row;
   align-items: center;
 
-  background-color: rgba(255, 255, 255, 0.25);
+  background-color: rgba(0, 0, 0, 0.8);
 
   transition: transform ease-out 0.1s;
   transform: scale(1);
@@ -35,7 +35,7 @@
 
   &:focus {
     transform: scale(0.99);
-    background-color: rgba(255, 255, 255, 0.45);
+    background-color: rgba(0, 0, 0, 0.6);
   }
 
   &:first-child {
@@ -48,7 +48,7 @@
 
   &:hover {
     cursor: pointer;
-    background-color: rgba(255, 255, 255, 0.35);
+    background-color: rgba(0, 0, 0, 0.4);
   }
 }
 
@@ -71,6 +71,8 @@
     font-size: 0.9em;
 
     .address {
+      font-family: monospace;
+
       &:hover {
         cursor: text;
       }
