registry dapp: address style grumbles :lipstick:

--- a/js/src/dapps/registry/ui/address.css
+++ b/js/src/dapps/registry/ui/address.css
@@ -30,10 +30,12 @@
 .link {
   text-decoration: none;
   color: inherit;
-}
-.link:hover {
-  text-decoration: underline;
-}
-.link abbr {
-  text-decoration: inherit;
+
+  &:hover {
+    text-decoration: underline;
+  }
+
+  & abbr {
+    text-decoration: inherit;
+  }
 }
