--- a/js/src/dapps/registry/ui/hash.css
+++ b/js/src/dapps/registry/ui/hash.css
@@ -18,7 +18,8 @@
 .link {
   text-decoration: none;
   color: inherit;
-}
-.link:hover {
-  text-decoration: underline;
+
+  &:hover {
+    text-decoration: underline;
+  }
 }
