--- a/js/src/views/Web/web.css
+++ b/js/src/views/Web/web.css
@@ -20,33 +20,48 @@
   height: 100%;
   width: 100%;
 }
+
 .loading {
   text-align: center;
   margin-top: 5em;
   color: #999;
   font-size: 2em;
 }
+
+$addressbar: 36px;
 .url {
   position: absolute;
   top: 0;
   width: 100%;
   box-sizing: border-box;
-  height: 2em;
-  line-height: 2em;
+  height: $addressbar;
+  line-height: $addressbar;
   display: flex;
-}
+  background: rgba(0, 0, 0, 0.85);
 
-.url > input {
-  flex: 1;
-  font-size: 1.1em;
-  padding: 0.1em 0.2em;
+  > button {
+    min-width: 50px !important;
+  }
+
+  > input {
+    flex: 1;
+    font-size: 1.1em;
+    padding: 0.2em 0.5em;
+    border-radius: 0.25em;
+    border: none;
+    background: #666;
+    color: #eee;
+    outline: none;
+    box-shadow: 0 0 2px #111 inset;
+    margin: 2px 0;
+  }
 }
 
 .frame {
   position: absolute;
   width: 100%;
-  height: calc(100% - 2em);
-  top: 2em;
+  height: calc(100% - $addressbar);
+  top: $addressbar;
   bottom: 0;
   left: 0;
   right: 0;
